tests/sema/fail/nullable_arithmetic_unhandled.kl
// RUN: check
// COMPILE-FAIL
// EXPECT-EXIT: 65

int main() {
  int? a = 7;
  int? b = null;
  return a + b;
}
